[gd_scene load_steps=47 format=3 uid="uid://cvl5b8cohcbaa"]

[ext_resource type="Script" uid="uid://bnx7ge14way62" path="res://Enemies/Blade Grunt/blade_grunt.gd" id="1_50226"]
[ext_resource type="Texture2D" uid="uid://dm6vf07tkdijr" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Armored Axeman/Armored Axeman/Armored Axeman-Idle.png" id="1_vrson"]
[ext_resource type="Texture2D" uid="uid://bdh80v7ckw2pv" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Armored Axeman/Armored Axeman/Armored Axeman-Walk.png" id="2_50226"]
[ext_resource type="Texture2D" uid="uid://b7gfmwe26oup8" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Armored Axeman/Armored Axeman/Armored Axeman-Attack01.png" id="2_vpyb2"]
[ext_resource type="Texture2D" uid="uid://dvtba77ybrwnh" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Armored Axeman/Armored Axeman/Armored Axeman-Hurt.png" id="4_qqgec"]
[ext_resource type="Texture2D" uid="uid://rdlux2o1pmjp" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Armored Axeman/Armored Axeman/Armored Axeman-Attack03.png" id="5_auyiq"]
[ext_resource type="Script" uid="uid://cm3yesdavn8r8" path="res://NotResolvedYet/parry_tag_area.gd" id="6_c37q0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpyb2"]
size = Vector2(89, 101)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh1gb"]
atlas = ExtResource("2_vpyb2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp8fp"]
atlas = ExtResource("2_vpyb2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4bic"]
atlas = ExtResource("2_vpyb2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjle6"]
atlas = ExtResource("2_vpyb2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnhog"]
atlas = ExtResource("2_vpyb2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1frdr"]
atlas = ExtResource("2_vpyb2")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_42mx0"]
atlas = ExtResource("2_vpyb2")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc1rx"]
atlas = ExtResource("2_vpyb2")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrvb3"]
atlas = ExtResource("4_qqgec")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpyb2"]
atlas = ExtResource("1_vrson")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqgec"]
atlas = ExtResource("1_vrson")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c37q0"]
atlas = ExtResource("1_vrson")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_auyiq"]
atlas = ExtResource("1_vrson")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn8tv"]
atlas = ExtResource("1_vrson")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk4lo"]
atlas = ExtResource("1_vrson")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lucxc"]
atlas = ExtResource("5_auyiq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqccf"]
atlas = ExtResource("5_auyiq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyedl"]
atlas = ExtResource("5_auyiq")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivs78"]
atlas = ExtResource("4_qqgec")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulg53"]
atlas = ExtResource("4_qqgec")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnnfy"]
atlas = ExtResource("4_qqgec")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_awjj7"]
atlas = ExtResource("4_qqgec")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lm45"]
atlas = ExtResource("2_50226")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_exrm7"]
atlas = ExtResource("2_50226")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxwtc"]
atlas = ExtResource("2_50226")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pmp1"]
atlas = ExtResource("2_50226")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d78r"]
atlas = ExtResource("2_50226")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk2ag"]
atlas = ExtResource("2_50226")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahfxw"]
atlas = ExtResource("2_50226")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1adv"]
atlas = ExtResource("2_50226")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntrss"]
atlas = ExtResource("2_vpyb2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3m3p"]
atlas = ExtResource("2_vpyb2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjio7"]
atlas = ExtResource("2_vpyb2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_lucxc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh1gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp8fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4bic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjle6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnhog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1frdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42mx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc1rx")
}],
"loop": false,
"name": &"Attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvb3")
}],
"loop": false,
"name": &"Defend",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpyb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqgec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c37q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auyiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn8tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk4lo")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lucxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqccf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyedl")
}],
"loop": false,
"name": &"PostParryWindup",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivs78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulg53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnnfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awjj7")
}],
"loop": true,
"name": &"Staggered",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lm45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exrm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxwtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pmp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d78r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahfxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1adv")
}],
"loop": true,
"name": &"Walk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntrss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3m3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjio7")
}],
"loop": false,
"name": &"Windup",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqgec"]
size = Vector2(92, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c37q0"]
size = Vector2(96, 123.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_auyiq"]
radius = 70.0643

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jn8tv"]
size = Vector2(1308, 74)

[node name="BladeGrunt" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_50226")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -12.5)
shape = SubResource("RectangleShape2D_vpyb2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1.00003)
scale = Vector2(5.86, 5.41)
sprite_frames = SubResource("SpriteFrames_lucxc")
animation = &"Staggered"
frame = 3

[node name="Hurtbox" type="Area2D" parent="." groups=["enemies"]]
position = Vector2(2, -13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_qqgec")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(97, -14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_c37q0")

[node name="ParryTagArea" type="Area2D" parent="." groups=["parryable"]]
position = Vector2(94, -15)
script = ExtResource("6_c37q0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParryTagArea"]
shape = SubResource("CircleShape2D_auyiq")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(1, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_jn8tv")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
